--- a/example/package.json
+++ b/example/package.json
@@ -14,8 +14,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1",
-    "typescript-react-test": "link:.."
+    "typescript-react-test": "link:..",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
