--- a/package.json
+++ b/package.json
@@ -22,17 +22,22 @@
   "author": "Poafs1 <poafs1@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/enzyme": "^3.10.9",
+    "@types/jest": "^27.0.1",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.3.5",
-    "@types/jest": "^27.0.1",
+    "babel-jest": "^27.0.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "ts-jest": "^27.0.5",
     "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.3.5"
   },
   "files": [
     "lib/**/*"
